Fix pointer-events for social icons on mobile

--- a/styles/assets/footer.sass
+++ b/styles/assets/footer.sass
@@ -1,4 +1,5 @@
 .footer
+  pointer-events: none
   height: 35vh
   z-index: 2000
   overflow: hidden
@@ -7,6 +8,7 @@
   padding: 0
   margin: 0
   bottom: 0
+
 .footer__text
   text-shadow: 2px 2px black
   line-height: 1
@@ -18,10 +20,8 @@
   font-size: 2rem
   font-weight: bold
 
-.footer-fixed-bg
-  width: 100%
-
 .footer__pin-wrapper
+  pointer-events: all
   cursor: pointer
   width: 75px
   height: 75px
